--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   background-color: var(--color-francis-grey);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
