layout tweaks, background fix, eval edit progress

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@
 
   color-scheme: dark;
 
-  
   background: #000000;
   background: linear-gradient(180deg,rgba(119, 119, 119, 1) 60%, rgba(156, 22, 22, 1) 100%);
+  background-attachment: fixed;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
